# DrawFusion

./: .gitignore  README.md  docker-compose.yml
ai-service/: ai_engine.py  game_master.py  requirements.txt  server.py  test_client.py  test_gemini.py  test_vision.py
ai-service/proto_out/: game_ai_pb2.py  game_ai_pb2.pyi  game_ai_pb2_grpc.py
backend-cpp/: CMakeLists.txt  test_drawfusion.db-shm  test_drawfusion.db-wal  vcpkg-configuration.json  vcpkg.json
backend-cpp/src/: ai_client.cpp  ai_client.h  db_manager.cpp  db_manager.h  main.cpp  models.h  test_db.cpp  test_libs.cpp
docker/: Dockerfile.ai  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  ARCHITECTURE.md  DATABASE.md
frontend/: index.html
frontend/css/: index.css
frontend/js/: app.js  canvas.js
proto/: game-ai.proto
sandbox/helloworld/: CMakeLists.txt  main.cpp  vcpkg.json
